<resources>
    <string name="app_name">Speedwagon</string>
    <string name="welcom_vehicle_tab">Drip stains when you switch lanes.</string>
    <string name="elderado_black_info">1984 Cadillac Elderado</string>
    <string name="elderado_black_mpg">MPG: 16 City/ 20 Highway</string>
    <string name="elderado_black_color">Exterior: Candy Paint Black</string>
    <string name="LoginMenu">Login</string>
    <string name="Login">Login</string>
    <string name="Contact">Contact Us</string>
    <string name="elderado_black_engine">Engine and Transmission: 8 cyl, 4.1 L, Automatic 4-spd</string>
    <string name="escalade_silver">2005 Cadillac Escalade EXT</string>
    <string name="escalade_silver_engine">Engine and Transmission: 6.0L V-8 Engine, 4-spd auto w/OD Transmission</string>
    <string name="escalade_silver_color">Exterior: Candy SIlver Paint</string>
    <string name="escalade_silver_mpg">MPG: 13 City/ 17 Highway</string>
    <string name="service_dealership_slogan">We share the Pride in your Ride</string>
    <string name="mechanic_side">Our mechanics are located on the west side of the dealership. We provide a simple yet efficient experience; just drop your car off and our manager Kars will have you situated. Or create an appointment.</string>
    <string name="mechanic_hours">"    Hours:"</string>
    <string name="mechanic_hours_sun">"    Sunday: Closed"</string>
    <string name="m_hours_mon">"    Monday: 7AM-7PM"</string>
    <string name="m_hours_tue">"    Tuesday: 7AM-7PM"</string>
    <string name="m_hours_wed">"    Wednesday: 7AM-7PM"</string>
    <string name="m_hours_th">"    Thursday: 7AM-7PM"</string>
    <string name="m_hours_f">"    Friday: 7AM-7PM"</string>
    <string name="m_hours_sat">"    Saturday: 7AM-7PM"</string>
    <string name="auto_service">Auto Service Center</string>
    <string name="service_b">Schedule Service</string>
    <string name="service_info">Our automotive technicians are factory-trained mechanics. They use state of the art equipment to help keep your vehicle running like new.</string>
    <string name="oil_change">Oil Change</string>
    <string name="oil_change_info">Oil changes are one of the most basic, yet most often misunderstood item of vehicle maintenance. It is important to ensure you are putting the right kind of oil in your vehicle. Mixing synthetic, synthetic-blend and conventional oil can ruin your engine.</string>
    <string name="wheel">Wheel Alignment and Tire Rotation</string>
    <string name="wheel_info">Using computerized wheel alignment and tire rotation and balancing machines</string>
    <string name="brake">Brake Check, Service and Repair</string>
    <string name="brake_info">The brake check is probably the most important vehicle maintenance task. Most people will wait until their brakes start making noise or skipping. This can actually damage your rotors and lead to a far more expensive auto repair. It is always best to get your brakes checked at least once a year to ensure they keep you safe on the road and don’t end up costing you more in the long run.</string>
    <string name="location">1867 Dio Brando Blvd.</string>
    <string name="appointment">Schedule Appointment</string>
    <string name="location_2">Houston, Tx, 77027</string>
    <string name="location_3">832-382-JOJO</string>
    <string name="welcome">Welcome to Speedwagon\'s Foundation</string>
    <string name="dealer">Car Service/Dealership</string>
    <string name="Contactview">Contact Us</string>
    <string name="Adresses"> 1867 Dio Brando Blvd.</string>
    <string name="emailinfo"> speedwagons@gmail.com</string>
    <string name="numberinfo"> 832-382-JOJO</string>

</resources>
