<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#e9fcfb">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="624dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:gravity="center"
                android:text="@string/auto_service"
                android:textColor="#FA000000"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="331dp"
                app:srcCompat="@drawable/born_this_way" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1148f5"
                android:text="@string/service_b" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/service_info"
                android:textColor="#FA464444"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oil_change"
                android:textColor="#0C0707"
                android:layout_marginLeft="15dp"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/oil_change_info"
                android:textColor="#FA464444"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/wheel"
                android:textColor="#FA1A0707"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wheel_info"
                android:layout_marginLeft="15dp"
                android:textColor="#FA464444"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brake"
                android:layout_marginLeft="15dp"
                android:textColor="#FC090000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/brake_info"
                android:textColor="#FA464444"
                android:textSize="18sp"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>