<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c5fbfc"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="619dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navi_guide">

        <TextView
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="77dp" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#C308F1"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dealer"
            android:textColor="#C308F1"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            app:srcCompat="@drawable/speedwagon" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/location"
            android:textColor="#C308F1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/location_2"
            android:textColor="#C308F1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/location_3"
            android:textColor="#C308F1"
            android:textSize="24sp" />

    </LinearLayout>



    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>


    <FrameLayout
        android:id="@+id/frag_contain"
        android:layout_width="412dp"
        android:layout_height="619dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navi_guide"></FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navi_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c651f6"
        app:itemIconTint="@color/colorPrimary"
        app:itemTextColor="#0C0101"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:menu="@menu/navi">

    </com.google.android.material.bottomnavigation.BottomNavigationView>



</androidx.constraintlayout.widget.ConstraintLayout>