<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-93dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/drip"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:layout_marginTop="11dp"
                android:gravity="center"
                android:text="@string/welcom_vehicle_tab"
                android:textColor="#B200FF"
                android:textSize="30sp"
                android:background="#e9fcfb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/navi_guide" />

            <ImageView
                android:id="@+id/elderado_slab"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/elderado_slab"
                tools:layout_editor_absoluteY="114dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:gravity="center"
                android:text="@string/elderado_black_info"
                android:textColor="#FD160101"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/elderado_slab" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/elderado_black_engine"
                android:textColor="#FC090000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="487dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/elderado_black_color"
                android:textColor="#FC090000"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/elderado_black_mpg"
                android:textColor="#FA090000"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/escalade_slab"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/escalade_slab"
                tools:layout_editor_absoluteY="114dp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/escalade_silver"
                android:textColor="#F80C0000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/escalade_silver_engine"
                android:textColor="#070000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/escalade_silver_color"
                android:textColor="#FA030000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/escalade_silver_mpg"
                android:textColor="#130101"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/regal"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/regal_slab"
                tools:layout_editor_absoluteY="114dp" />

            <TextView
                android:id="@+id/regal_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1999 Buick Regal"
                android:textColor="#F80C0000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/regal_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Engine and Transmission: 3.8 L V6, 4-spd auto w/OD"
                android:textColor="#070000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/regal_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Exterior: Candy Paint Red"
                android:textColor="#FA030000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/regal_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="MPG: 19 City,30 Hwy"
                android:textColor="#130101"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/old"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/oldsmobile_green"
                tools:layout_editor_absoluteY="114dp" />

            <TextView
                android:id="@+id/old1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1973 Oldsmobile Cutleass Supreme Coupe"
                android:textColor="#F80C0000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/old2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Engine and Transmission: 7.5 L V8, 3 speed manual"
                android:textColor="#070000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/old3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Exterior: Candy Paint Olive"
                android:textColor="#FA030000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/old4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="MPG: 12 City,14 Hwy"
                android:textColor="#130101"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>