<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#025DB1"
    android:backgroundTint="#00017294"
    tools:context=".ContactActivity">


    <TextView
        android:id="@+id/ContactView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="serif"
        android:text="@string/Contactview"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FCFCFC"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="-139dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="416dp"
        android:layout_height="82dp"
        android:background="#000000"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ContactView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="textPersonName"
        android:text="@string/Contactview"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/ContactView"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view"
        android:layout_width="420dp"
        android:layout_height="691dp"
        android:background="@drawable/my_gradient_drawable"
        app:layout_constraintBottom_toBottomOf="@+id/ContactView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ContactView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="402dp"
        android:layout_height="52dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPersonName"
        android:text="@string/Adresses"
        app:layout_constraintBottom_toBottomOf="@+id/ContactView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="@+id/ContactView"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/emailinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emailinfo"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/numberinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/numberinfo"
        app:layout_constraintStart_toStartOf="@+id/emailinfo"
        app:layout_constraintTop_toBottomOf="@+id/emailinfo" />

    <ImageView
        android:id="@+id/map"
        android:layout_width="354dp"
        android:layout_height="202dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/ContactView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberinfo"
        app:layout_constraintVertical_bias="0.419"
        app:srcCompat="@drawable/map" />


</androidx.constraintlayout.widget.ConstraintLayout>